# spin-component-examples

./: README.md
example1/business-logic/: Cargo.toml
example1/business-logic/src/: bindings.rs
example1/business-logic/wit/: world.wit
example1/spin-app/: Cargo.toml
example1/spin-app/src/: bindings.rs  lib.rs
http-auth-middleware/example/: spin.toml  stripped_service.wasm
http-auth-middleware/example/src/: bindings.rs
http-auth-middleware/github-oauth/: Cargo.toml
http-auth-middleware/github-oauth/src/: bindings.rs  lib.rs
http-auth-middleware/github-oauth/src/api/: authenticate.rs  authorize.rs  callback.rs  login.rs
http-to-redis/cloud-event/: Cargo.toml  spin.toml
http-to-redis/cloud-event/src/: bindings.rs  lib.rs
http-to-redis/cloud-event/wit/: world.wit
http-to-redis/redis-handler/: Cargo.toml
http-to-redis/redis-handler/src/: bindings.rs  lib.rs
http-to-redis/redis-handler/wit/: world.wit
spin-app-import/: README.md  deps.md
spin-app-import/business-logic/: Cargo.toml
spin-app-import/business-logic/src/: bindings.rs  lib.rs
spin-app-import/business-logic/wit/: world.wit
spin-app-import/spin-app/: spin.toml
spin-app-import/spin-app-component/: Cargo.toml  spin.toml
spin-app-import/spin-app-component/src/: bindings.rs
spin-app-import/spin-app-component/wit/: world.wit
spin-app-import/spin-app-dependencies/: Cargo.toml  spin.toml
spin-app-import/spin-app-dependencies/.wit/components/spin-app-dependencies/: deps.wit
spin-app-import/spin-app-dependencies/src/: lib.rs
spin-app-import/spin-app-dependencies/src/bindings/: deps.rs
sqlite-proxy/: .gitignore  README.md
sqlite-proxy/example/: spin.toml
sqlite-proxy/example/rust/: Cargo.toml
sqlite-proxy/example/rust/src/: lib.rs
sqlite-proxy/proxy/: Cargo.toml
sqlite-proxy/proxy/src/: bindings.rs  lib.rs
sqlite-proxy/proxy/wit/: world.wit
sqlite-proxy/sql-proxy/: db.sql  spin.toml
sqlite-proxy/sql-proxy/python/: app.py  build.sh
wasi-http-tools-demo-container/: .Dockerfile.swp  Dockerfile
