[package]
name = "github-oauth"
description = "An HTTP authentication middleware component."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
cookie = "0.18"
futures = "0.3.28"
http = "0.2"
json = "0.12.4"
oauth2 = { version = "4.4.2", default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
spin-sdk = "3.0.1"
url = "2.4.0"
wit-bindgen = "0.19.2"

[workspace]

[package.metadata.component]
package = "middleware:http-auth"

[package.metadata.component.registries]
default = "https://wasi.wa.dev"

[package.metadata.component.target.dependencies]
"wasi:http" = "0.2.0"
"wasi:cli" = "0.2.0"

[features]
# Inject oauth credentials environment variables at compile time rather than runtime
compile-time-secrets = []
