[package]
name = "cloud-event"
authors = ["Mikkel Mørk Hegnhøj <mikkel@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0.1"
wit-bindgen = "0.24"
wit-bindgen-rt = "0.24.0"

[workspace]

[package.metadata.component]
package = "component:cloud-event"

[package.metadata.component.target.dependencies]
"component:inboud-redis" = { path = "../redis-handler/wit" }
