[package]
name = "redishandler"
authors = ["Mikkel Mørk Hegnhøj <mikkel@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# The Spin SDK.
spin-sdk = "3.0.1"

[package.metadata.component]
package = "component:inboud-redis"

[package.metadata.component.dependencies]

[workspace]
