[package]
name = "businesslogic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = "0.34.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:business-logic"

[package.metadata.component.dependencies]
