[package]
name = "spinhttpcomponent"
authors = ["Mikkel Mørk Hegnhøj <mikkel@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
spin-sdk = "2.2.0"
wit-bindgen = "0.21"

[workspace]

[package.metadata.component]
package = "component:spin-http-component"

[package.metadata.component.target.dependencies]
"component:bl" = { path = "../business-logic/wit" }

[package.metadata.component.bindings]
derives = ["serde::Serialize", "serde::Deserialize"]
