[package]
name = "spin-app-dependencies"
authors = ["Mikkel Mork Hegnhoj <mikkel@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.34.0"

[workspace]
