[package]
name = "example"
description = "A simple HTTP handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "main" }

[workspace]

[package.metadata.component]
package = "demo:example"
